--- a/config/providers/middlewares.yml
+++ b/config/providers/middlewares.yml
@@ -19,8 +19,8 @@ http:
         customRequestHeaders:
           X-Forwarded-Proto: https
 
-    default-whitelist: # Whitelist for internal networks, if applied denies all other traffic
-      ipWhiteList:
+    allowlist: # Whitelist for internal networks, if applied denies all other traffic
+      ipAllowList:
         sourceRange:
           - "10.0.0.0/8"
           - "192.168.0.0/16"
@@ -29,5 +29,22 @@ http:
     proxmox: # Proxmox node chain - chain can be used to add multiple middlewares to a router
       chain:
         middlewares:
-          - default-whitelist
+          - allowlist
           - pve-headers
+
+    authentik:
+        forwardAuth:
+            address: http://outpost.company:9000/outpost.goauthentik.io/auth/traefik
+            trustForwardHeader: true
+            authResponseHeaders:
+                - X-authentik-username
+                - X-authentik-groups
+                - X-authentik-email
+                - X-authentik-name
+                - X-authentik-uid
+                - X-authentik-jwt
+                - X-authentik-meta-jwks
+                - X-authentik-meta-outpost
+                - X-authentik-meta-provider
+                - X-authentik-meta-app
+                - X-authentik-meta-version
