--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   traefik:
-    image: traefik:2.10.4
+    image: traefik:v3.2.0
     container_name: traefik
     restart: unless-stopped
     security_opt:
