--- a/compose.yml
+++ b/compose.yml
@@ -1,7 +1,7 @@
 version: '3.9'
 services:
   traefik:
-    image: traefik:v3.2.0
+    image: traefik:v3.3.2
     container_name: traefik
     restart: unless-stopped
     security_opt:
@@ -10,10 +10,11 @@ services:
       - proxy
     env_file:
       - .env
-    user: 1000:10337 # Change this to your user and group id
+    user: 1000:1000 # Change this to your user and group id
     ports:
       - 80:80
       - 443:443
+      - 8080:8080
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /var/run/docker.sock:/var/run/docker.sock:ro
@@ -21,15 +22,12 @@ services:
       - ./config/providers:/providers:ro
       - ./config/acme.json:/acme.json
     labels: # Traefik dashboard labels - not required
-      traefik.enable: "true"
-      traefik.http.routers.traefik.entrypoints: http
+      traefik.enable: true
+      traefik.http.routers.traefik.entrypoints: websecure
       traefik.http.routers.traefik.rule: Host(`traefik.int.example.com`) # Change this to your domain
-      traefik.http.routers.traefik.middlewares: "https-redirect@file, default-whitelist@file"
-      traefik.http.routers.traefik-secure.entrypoints: https
-      traefik.http.routers.traefik-secure.rule: Host(`traefik.int.example.com`) # Change this to your domain
-      traefik.http.routers.traefik-secure.middlewares: "https-redirect@file, default-whitelist@file"
-      traefik.http.routers.traefik-secure.tls: true
-      traefik.http.routers.traefik-secure.service: api@internal
+      traefik.http.routers.traefik.middlewares: "allowlist@file"
+      traefik.http.routers.traefik.tls: true
+      traefik.http.routers.traefik.service: api@internal
 
 networks:
   proxy:
