--- a/config/traefik.yml
+++ b/config/traefik.yml
@@ -1,35 +1,42 @@
+---
 api:
   dashboard: true
   debug: true
+  insecure: true
+
+log:
+  level: DEBUG
+
+accessLog: {}
+
 entryPoints:
-  http:
-    address: ":80"
+  web:
+    address: :80
     http:
       redirections:
         entryPoint:
-          to: https
+          to: websecure
           scheme: https
-          permanent: true
-  https:
-    address: ":443"
+  websecure:
+    address: :443
+
 metrics:
   prometheus: {}
+
 serversTransport:
   insecureSkipVerify: true
+
 providers:
-  # docker:
-  #   endpoint: "unix:///var/run/docker.sock"
-  #   exposedByDefault: false
   file:
     directory: /providers
     watch: true
+
 certificatesResolvers:
   cloudflare:
     acme:
-      email: johndoe@example.com # Cloudflare email address goes here
+      email: email@example.com
       storage: acme.json
       dnsChallenge:
         provider: cloudflare
         resolvers:
           - "1.1.1.1:53"
-          - "1.0.0.1:53"
